@@ -6,6 +6,11 @@
 ---------------------------------------------
 - 2020-12-05                                -
 ---------------------------------------------
+.: WSM: Task: Update autocomplete api (WSM-248)
+
+---------------------------------------------
+- 2020-12-05                                -
+---------------------------------------------
 .: WSM: Task: Update upload url (WSM-216)
 
 ---------------------------------------------
